--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist = test, lint
 minversion = 2.5.0
+isolated_build = true
 
 [testenv]
 basepython = python3.9
@@ -43,7 +44,7 @@ skip_install = true
 deps = -rrequirements_lint.txt
 commands =
     flake8 yarrharr
-    black --check setup.py yarrharr
+    black --check yarrharr
 
 [testenv:deps]
 description = Pin dependencies
@@ -52,8 +53,13 @@ deps = pip-tools
 commands =
     pip-compile --output-file requirements_lint.txt requirements_lint.in {posargs}
     pip-compile --output-file requirements_static.txt requirements_static.in {posargs}
-    pip-compile --output-file requirements.txt setup.py {posargs}
+    pip-compile --output-file requirements.txt pyproject.toml {posargs}
     pip-compile --output-file requirements_test.txt requirements_test.in {posargs}
+    pip-compile --output-file requirements_release.txt requirements_release.in {posargs}
+
+[testenv:release]
+skip_install = true
+deps = -rrequirements_release.txt
 
 [flake8]
 exclude =
