--- a/tox.ini
+++ b/tox.ini
@@ -43,7 +43,7 @@ description = Lint the codebase
 skip_install = true
 deps = -rrequirements_lint.txt
 commands =
-    flake8 yarrharr
+    ruff yarrharr
     black --check yarrharr
 
 [testenv:deps]
