--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,13 +49,20 @@ version = {attr = "yarrharr.__version__"}
 include = ["yarrharr", "yarrharr/*"]
 namespaces = false
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-include_trailing_comma = true
-skip = "yarrharr/wsgi.py"
-skip_glob = "yarrharr/migrations/*.py"
-line_length = 150
+[tool.ruff]
+select = [
+  "E",
+  "F",
+  "I",
+]
+ignore = [
+]
+line-length = 150
+target-version = "py39"
+
+[tool.ruff.per-file-ignores]
+"yarrharr/wsgi.py" = ["E402"]
+"yarrharr/migrations/*.py" = ["I", "F401"]
 
 [tool.black]
 line-length = 150
