--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -8,18 +8,6 @@ black==23.3.0
     # via -r requirements_lint.in
 click==8.1.3
     # via black
-flake8==6.0.0
-    # via
-    #   -r requirements_lint.in
-    #   flake8-isort
-flake8-isort==6.0.0
-    # via -r requirements_lint.in
-isort==5.11.4
-    # via
-    #   -r requirements_lint.in
-    #   flake8-isort
-mccabe==0.7.0
-    # via flake8
 mypy-extensions==0.4.3
     # via black
 packaging==23.0
@@ -28,10 +16,8 @@ pathspec==0.10.1
     # via black
 platformdirs==2.5.2
     # via black
-pycodestyle==2.10.0
-    # via flake8
-pyflakes==3.0.1
-    # via flake8
+ruff==0.0.269
+    # via -r requirements_lint.in
 tomli==2.0.1
     # via black
 typing-extensions==4.5.0
