--- a/requirements_lint.txt
+++ b/requirements_lint.txt
@@ -18,3 +18,7 @@ platformdirs==2.5.2
     # via black
 ruff==0.0.276
     # via -r requirements_lint.in
+tomli==2.0.1
+    # via black
+typing-extensions==4.7.1
+    # via black
