--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -8,6 +8,8 @@ cssselect==1.2.0
     # via -r requirements_test.in
 decorator==5.1.1
     # via pytest-twisted
+exceptiongroup==1.1.2
+    # via pytest
 greenlet==1.1.3
     # via pytest-twisted
 iniconfig==1.1.1
@@ -29,3 +31,5 @@ pytest-django==4.5.2
     # via -r requirements_test.in
 pytest-twisted==1.14.0
     # via -r requirements_test.in
+tomli==2.0.1
+    # via pytest
