--- a/requirements_release.txt
+++ b/requirements_release.txt
@@ -25,8 +25,6 @@ importlib-metadata==6.8.0
     #   build
     #   keyring
     #   twine
-importlib-resources==6.0.1
-    # via keyring
 jaraco-classes==3.3.0
     # via keyring
 jeepney==0.8.0
@@ -75,8 +73,6 @@ tomli==2.0.1
     #   pyproject-hooks
 twine==4.0.2
     # via -r requirements_release.in
-typing-extensions==4.7.1
-    # via rich
 urllib3==2.0.4
     # via
     #   requests
@@ -84,6 +80,4 @@ urllib3==2.0.4
 webencodings==0.5.1
     # via bleach
 zipp==3.16.2
-    # via
-    #   importlib-metadata
-    #   importlib-resources
+    # via importlib-metadata
