--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ skip_install = true
 deps = -rrequirements_lint.txt
 commands =
     ruff yarrharr
-    ruff format yarrharr
+    ruff format --check yarrharr
 
 [testenv:deps]
 description = Pin dependencies
