--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         tox-env: ["test", "lint"]
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     env:
       TOXENV: "${{ matrix.tox-env }}"
       RUFF_OUTPUT_FORMAT: "github"
@@ -25,15 +25,10 @@ jobs:
     - uses: actions/setup-python@v5.1.0
       with:
         python-version: "3.9"
-
-    - name: pip cache
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: "${{ runner.os }}-pip-${{ matrix.tox-env }}-${{ hashFiles('tox.ini') }}"
-        restore-keys: |
-          ${{ runner.os }}-pip-${{ matrix.tox-env }}-
-          ${{ runner.os }}-pip-
+        cache: 'pip'
+        cache-dependency-path: |
+          requirements.txt
+          requirements_*.txt
 
     - run: "python -m pip install tox"
 
@@ -50,7 +45,7 @@ jobs:
   webpack:
     name: "tox -e static"
 
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
 
     steps:
     - uses: actions/checkout@v4
@@ -63,15 +58,9 @@ jobs:
     - uses: actions/setup-python@v5.1.0
       with:
         python-version: "3.9"
-
-    - name: pip cache
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/pip
-        key: "${{ runner.os }}-pip-static-${{ hashFiles('tox.ini') }}"
-        restore-keys: |
-          ${{ runner.os }}-pip-static-
-          ${{ runner.os }}-pip-
+        cache: 'pip'
+        cache-dependency-path: |
+          requirements_static.txt
 
     - run: "python -m pip install tox"
 
