--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,3 +11,6 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    ignore:
+      dependency-name: ruff
+      update-types: ["version-update:semver-minor"]
