--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,4 +13,6 @@ updates:
       interval: "daily"
     ignore:
       dependency-name: ruff
-      update-types: ["version-update:semver-minor"]
+      update-types:
+        - "version-update:semver-minor"
+        - "version-update:semver-patch"
