Quiet Twisted-internal deprecation warnings
This is tracked in https://github.com/twisted/twisted/issues/12172

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ changedir =
 ; working directory, so put that somewhere temporary:
     {envtmpdir}
 commands =
-    pytest {toxinidir}/yarrharr
+    pytest {toxinidir}/yarrharr {posargs}
     django-admin makemigrations --dry-run --check
 
 [testenv:run]
@@ -76,3 +76,5 @@ filterwarnings=
     ignore:Using readBody with a transport that does not have an abortConnection method:DeprecationWarning
     # Tracked in https://github.com/twm/yarrharr/issues/659
     ignore:html5lib's sanitizer:DeprecationWarning
+    # Tracked in https://github.com/twisted/twisted/issues/12172
+    ignore:twisted.web.resource._Unsafe:DeprecationWarning:
