--- a/requirements_static.txt
+++ b/requirements_static.txt
@@ -6,5 +6,9 @@
 #
 brotli==1.1.0
     # via -r requirements_static.in
+tinycss2==1.3.0
+    # via -r requirements_static.in
+webencodings==0.5.1
+    # via tinycss2
 zopfli==0.2.3
     # via -r requirements_static.in
